Remove appearance settings

--- a/beamer/example/beamerexample-conference-talk.tex
+++ b/beamer/example/beamerexample-conference-talk.tex
@@ -9,7 +9,7 @@
 
 
 
-\documentclass{beamer}
+\documentclass{../neutron}
 
 %
 % DO NOT USE THIS FILE AS A TEMPLATE FOR YOUR OWN TALKS¡!!
@@ -21,10 +21,10 @@
 
 % Setup appearance:
 
-\usetheme{Darmstadt}
-\usefonttheme[onlylarge]{structurebold}
-\setbeamerfont*{frametitle}{size=\normalsize,series=\bfseries}
-\setbeamertemplate{navigation symbols}{}
+%\usetheme{Darmstadt}
+%\usefonttheme[onlylarge]{structurebold}
+%\setbeamerfont*{frametitle}{size=\normalsize,series=\bfseries}
+%\setbeamertemplate{navigation symbols}{}
 
 
 % Standard packages
