Set basic template settings

--- a/beamer/neutron.cls
+++ b/beamer/neutron.cls
@@ -2,4 +2,10 @@
 %% Beamer Neutron
 %%
 
+\NeedsTeXFormat{LaTeX2e}
 \ProvidesClass{Neutron}[2017]
+
+\LoadClass[aspectratio=1610]{beamer}
+
+\beamertemplatenavigationsymbolsempty
+\setbeamercovered{transparent}
